--- a/index.html
+++ b/index.html
@@ -1,130 +1,49 @@
 <!DOCTYPE html>
-
 <html>
-
-
 <head>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y2ETBJ4CD5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-Y2ETBJ4CD5');
-</script>
-
+    <!-- Analytics and style imports remain the same -->
+    <meta charset="UTF-8">
     <title>Mayank Agrawal</title>
-    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-
     <h1>Mayank Agrawal</h1>
-         <h4>mayank dot agrawal at princeton dot edu</h4>
-         <!-- Links -->  /&nbsp
-         <a href="index.html" >home</a> &nbsp/&nbsp
-         <a href="research.html">research</a> &nbsp/
-        <!-- <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp -->
-         <a href="https://twitter.com/_magrawal" >twitter</a> &nbsp/&nbsp
-         <!-- <a href="https://scholar.google.com/citations?user=H_fTQ0EAAAAJ&hl=en">scholar</a> &nbsp/ -->
-         <a href="https://linkedin.com/in/mayank-agrawal-08849aa6
-">linkedin</a> &nbsp/
-         <a href="https://roundtable.ai">roundtable</a> &nbsp/
-
-    <!-- About -->
-    <h2>overview</h2>
-    <div style="margin-left: 2em;">
-
-
-    <p>I am currently building <a href='https://roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. We provide automated data cleaning and fraud detection for market research firms including JD Power, Directions Group, and Respondent.io. We've also built a <a href='https://news.ycombinator.com/item?id=36865625'>simulated survey tool</a> and an <a href='https://github.com/roundtableAI/roundtable-js'>open-source programmable survey software</a>.
-
-
-    <p>Previously, I was a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>, and <a href="http://dawlab.princeton.edu/" >Nathaniel Daw</a>. Before that, I studied Computer Science and Philosophy at Swarthmore College. My research overview can be accessed <a href="research.html">here</a>.
+    <h4>mayank at roundtable dot ai</h4>
+    
+    <div class="nav">
+        <a href="index.html">home</a> / <a href="https://twitter.com/_magrawal">twitter</a> / <a href="https://linkedin.com/in/mayank-agrawal-08849aa6">linkedin</a> / <a href="https://roundtable.ai">roundtable</a>
+    </div>
 
     <p>
-
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
+        I'm building the digital trust layer at <a href='https://roundtable.ai'>Roundtable</a>. 
+        <br><br>
+        Our core thesis is that identity is behavioral -- a continuous, dynamic fingerprint shaped by action, not static credentials.
     </p>
 
+    <p>Previously, I</p>
+    <ul>
+        <li>studied cognitive science, decision theory, and machine learning at Princeton with <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/">Tom Griffiths</a>, 
+            and <a href="http://dawlab.princeton.edu/">Nathaniel Daw</a>.</li>
+        <li>ran cross country and track & field at Swarthmore while mapping moral epistemology onto computational learning theory</li>
+        <li>went <a href="https://news.ycombinator.com/item?id=35555555">viral on Hacker News</a> during YC S23</li>
+        <li>conducted biotech ML research at <a href="https://www.kallyope.com/">Kallyope</a> and data science ops at <a href="https://www.mercuryfund.com/">Mercury Fund</a></li>
+        <li>taught amazing students at <a href="https://breakthroughhouston.org/">Breakthrough Houston</a></li>
+        <li>characterized NBA team chemistry dynamics via multidimensional vector spaces while also making viral YouTube player mixtapes</li>
+    </ul>
 
-    <p>Are you a fan of my work and want to support it? <a href='https://www.buymeacoffee.com/magrawal'>Buy me a coffee!</a></p>
+    <p>Selected Publications:</p>
+    <ul>
+        <li><a href="https://mayank-agrawal.com/papers/AgrawalPetersonGriffiths20.pdf">"Scaling up Psychology via Scientific Regret Minimization"</a>, PNAS, 2020</li>
+        <li><a href="https://mayank-agrawal.com/papers/AgrawalMattarCohenDaw21.pdf">"The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom"</a>, Psychological Review, 2021</li>
+        <li><a href="https://mayank-agrawal.com/papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">"Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making"</a>, Science, 2021</li>
+    </ul>
 
-
+    <div class="credits">
+        template creds: <a href="http://willzeng.com/">here</a> and <a href="https://www.sualehasif.me/">here</a>
     </div>
-
-    <!-- <h2>publications</h2>
-
-    <div style="margin-left: 2em;">
-
-    <p><a href='papers/AgrawalPetersonCohenGriffiths23.pdf'>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic</a>
-      <br/>Mayank Agrawal, Joshua C. Peterson, Jonathan D. Cohen, Thomas L. Griffiths
-      <br/><i>Journal of Experimental Psychology: General</i>
-    </p>
-
-    <p><a href="papers/ChristianAgrawal22.pdf">A Computational Model of Unintentional Mind Wandering in Focused Attention Meditation</a>
-      <br/>Isaac Christian and Mayank Agrawal
-      <br/><i>Proceedings of the 44th Annual Conference of the Cognitive Science Society</i>
-    </p>
-
-      <p><a href="papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making</a>
-      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
-      <br/><i>Science</i>
-        </p>
-
-    <p><a href="papers/AgrawalMattarCohenDaw21.pdf">The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
-      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
-      <br/><i>Psychological Review</i>
-    </p>
-
-    <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
-      <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
-      <br/><i>Proceedings of the National Academy of Sciences</i>
-    </p>
-
-    <p><a href="papers/JasEtAl20.pdf">Pyglmnet: Python Implementation of Elastic-net Regularized Generalized Linear Models</a>
-      <br/>Mainak Jas, Titipat Achakulvisut, Aid Idrizović, Daniel Acuna, Matthew Antalek, Vinicius Marques, Tommy Odland, Ravi Garg, Mayank Agrawal, Yu Umegaki, Peter Foley, Hugo Fernandes, Drew Harris, Beibin Li, Olivier Pieters, Scott Otterson, Giovanni De Toni, Chris Rodgers, Eva Dyer, Matti Hamalainen, Konrad Kording, Pavan Ramkumar
-      <br/><i>Journal of Open Source Software</i>
-    </p>
-
-    <p><a href="papers/AgrawalPetersonGriffiths19.pdf">Using Machine Learning to Guide Cognitive Modeling: A Case Study in Moral Reasoning</a>
-      <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
-      <br/><i>Proceedings of the 41st Annual Conference of the Cognitive Science Society</i>
-    </p>
-
-    <p><a href="papers/MoraudTinkhauserAgrawalBrownBogacz18.pdf">Predicting Beta Bursts From Local Field Potentials to Improve Closed-Loop DBS Paradigms in Parkinson's Patients
-</a>
-      <br/>Eduardo M. Moraud, Gerd Tinkhauser, Mayank Agrawal, Peter Brown, Rafal Bogacz
-      <br/><i>Proceedings of the 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society</i>
-    </p>
-
-    </div>
-
-    <h2>working papers</h2>
-
-    <div style="margin-left: 2em;">
-
-    <p>Maxim Consequentialism for Bounded Agents
-      <br/>Mayank Agrawal and David Danks
-    </p> -->
-
-
-  </div>
-
-
-    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-        <tr><td><br><p align="right" style="color:#ee3e61;"><font size="2">
-        template creds: <a href="http://willzeng.com/" style="color:#ee3e61;">here</a> and <a href="https://www.google.com/search?q=liverpool+away+kit+21%2F22&tbm=isch&source=hp&biw=1440&bih=686&ei=S5rNYu7xD9K6qtsPiJiwoAI&iflsig=AJiK0e8AAAAAYs2oW6Wo-Cakupebw6C78m2LhMsvnNAS&oq=liverpool+away&gs_lcp=CgNpbWcQAxgBMgsIABCABBCxAxCDATIICAAQgAQQsQMyCwgAEIAEELEDEIMBMgUIABCABDIECAAQAzIECAAQAzILCAAQgAQQsQMQgwEyBQgAEIAEMggIABCABBCxAzIFCAAQgAQ6CAgAELEDEIMBUPEBWOkNYL8XaABwAHgAgAFDiAH8BJIBAjE0mAEAoAEBqgELZ3dzLXdpei1pbWewAQA&sclient=img" style="color:#ee3e61;">here</a>
-        </font></p></td></tr>
-    </table>
-
-
-
-
 </body>
 
 </html>
