--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <div class="nav">
         <a href="index.html">home</a> / <a href="https://twitter.com/_magrawal">twitter</a> / <a href="https://linkedin.com/in/mayank-agrawal-08849aa6">linkedin</a> / <a href="https://roundtable.ai">roundtable</a>
     </div>
-
     <p>
-        I'm building the digital trust layer at <a href='https://roundtable.ai'>Roundtable</a>. 
+        <br>
+        The AI revolution is ushering in a new age of authencitiy. At <a href='https://roundtable.ai'>Roundtable</a>, we're building a digital trust layer rooted in behavior.
         <br><br>
-        Our core thesis is that identity is behavioral -- a continuous, dynamic fingerprint shaped by action, not static credentials.
+        Fraudsters can fake credentials, spoof devices, and steal passwords. But they can’t fake behavior at scale. We build models that separate real from fake by analyzing session dynamics, cognitive patterns, and interaction flows -- verifying identity in real-time, without friction.
+
     </p>
 
-    <p>Previously, I</p>
+    <p>Previously</p>
     <ul>
         <li>studied cognitive science, decision theory, and machine learning at Princeton with <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/">Tom Griffiths</a>, 
             and <a href="http://dawlab.princeton.edu/">Nathaniel Daw</a>.</li>
