--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <p>
         <br>
-        The AI revolution is ushering in a new age of authencitiy. At <a href='https://roundtable.ai'>Roundtable</a>, we're building a digital trust layer rooted in behavior.
+        The AI revolution is ushering in a new age of authenticity. At <a href='https://roundtable.ai'>Roundtable</a>, we're building a digital trust layer rooted in behavior.
         <br><br>
         Fraudsters can fake credentials, spoof devices, and steal passwords. But they can’t fake behavior at scale. We build models that separate real from fake by analyzing session dynamics, cognitive patterns, and interaction flows -- verifying identity in real-time, without friction.
 
