--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
     <p>
         <br>
+        I'm currently building the <a href="https://research.roundtable.ai/proof-of-huan">proof-of-human API</a>, an invisible Turing Test for the Internet.
+        <br><br>
         The AI revolution is ushering in a new age of authenticity. At <a href='https://roundtable.ai'>Roundtable</a>, we're building a digital trust layer rooted in behavior.
         <br><br>
         Fraudsters can fake credentials, spoof devices, and steal passwords. But they can’t fake behavior at scale. We build models that separate real from fake by analyzing session dynamics, cognitive patterns, and interaction flows -- verifying identity in real-time, without friction.
